# C_homework

./: .clang-format  README.md
.github/workflows/: build-and-lint.yml
1.Introduction-to-C-and-problem-analysis/: CMakeLists.txt
12.Data-representation/: CMakeLists.txt
12.Data-representation/src/Task_1/: binary.c  binary.h
12.Data-representation/src/Task_2/: double.c
12.Internal-data-representation/: CMakeLists.txt
12.Internal-data-representation/src/Task_1/: binary.c  binary.h  main.c
12.Internal-data-representation/src/Task_2/: double.c
2.Style-guide/: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt
2.Style-guide/Task_1/: Calculating-a-polynomial.c
2.Style-guide/Task_2/: Incomplete-quotient.c
2.Style-guide/Task_3/: Lucky-tickets.c  a.out
2.Style-guide/Task_4/: Flipping-the-array.c  a.out
2.Style-guide/src/Task_1/: Calculating-a-polynomial.c
2.Style-guide/src/Task_2/: Incomplete-quotient.c
2.Style-guide/src/Task_3/: Lucky-tickets.c
2.Style-guide/src/Task_4/: Flipping-the-array.c
2.This-name-will-be-changed/Task_2/: Incomplete-quotient.c
2.This-name-will-be-changed/Task_3/: Lucky-tickets.c
2.This-name-will-be-changed/Task_4/: Flipping-the-array.c
3.Compilation-process/: CMakeLists.txt
3.Compilation-process/Task_1/: Parenthesis-balance.c  a.out
3.Compilation-process/Task_2/: Substrings  Substrings.c
3.Compilation-process/Task_3/: Zeros-in-array  Zeros-in-array.c
3.Compilation-process/src/Task_1/: Parenthesis-balance.c
3.Compilation-process/src/Task_2/: Substrings.c
3.Compilation-process/src/Task_3/: Zeros-in-array.c
4.Libraries-and-optimizations/: CMakeLists.txt  README.md
4.Libraries-and-optimizations/Task_1/: main.c  program  sort.c  sort.s
4.Libraries-and-optimizations/src/Task_1/: main.c
5.Stack-and-Quene/: CMakeLists.txt
5.Stack-and-Quene/Stack/: stack.c  stack.h
5.Stack-and-Quene/src/Stack/: stack.c
5.Stack-and-Quene/src/Task_1/: Advancd-bracket-balance.c  a.out
5.Stack-and-Quene/src/Task_2/: Sorting-yard.c
6.Lists/: CMakeLists.txt
6.Lists/Task_1/: Sorted-list  Sorted-list.c
6.Lists/Task_2/: Counting-rhyme.c
6.Lists/src/Task_1/: CMakeLists.txt  Sorted-list.c
6.Lists/src/Task_2/: Counting-rhyme.c
Control-works/Control-work-No.1/Rewriting/Task_1/src/: Fibonacci.c
Control-works/Control-work-No.1/Rewriting/Task_2/src/: Palindrome.c
Control-works/Control-work-No.1/Rewriting/Task_3/src/: Sorting.c
Control-works/Control-work-No.1/Task_1/: Fibonacci.c
Control-works/Control-work-No.1/Task_2/: Sorting-by-choice.c
Control-works/Control-work-No.2/Rewrite/Task_1/: .gitignore  CMakeLists.txt  README.md
Control-works/Control-work-No.2/Rewrite/Task_1/include/: palindrome.h
Control-works/Control-work-No.2/Rewrite/Task_1/src/: main.c  palindrome.c
Control-works/Control-work-No.2/Rewrite/Task_1/tests/: test_palindrome.c
Control-works/Control-work-No.2/Rewrite/Task_2/: CMakeLists.txt  README.md
Control-works/Control-work-No.2/Rewrite/Task_2/include/: cyclic_shift.h
Control-works/Control-work-No.2/Rewrite/Task_2/src/: cyclic_shift.c  main.c
Control-works/Control-work-No.2/Rewrite/Task_2/tests/: test_cyclic_shift.c
Control-works/Control-work-No.2/Task_1/: Functional-queue.c
Control-works/Control-work-No.2/Task_2/: Comparison.c
Stack/: stack.c  stack.h
